fix sibling item overflow + css separation

--- a/public/less/bevy/SiblingPanel.less
+++ b/public/less/bevy/SiblingPanel.less
@@ -38,105 +38,5 @@
     flex-direction: column;
     align-items: flex-start;
     padding-right: 15px;
-    
-    .new-tag {
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      height: 40px;
-      align-items: center;
-
-      .color-picker {
-        position: relative;
-        .color-btn {
-          width: 24px;
-          height: 24px;
-          border-radius: 20px;
-          border: none;
-          margin-right: 10px;
-          box-shadow: @shadow1;
-          transition: all .2s ease-in-out;
-          &:hover {
-
-          }
-          &:active{
-            box-shadow: none;
-            box-shadow: @shadow2;
-          }
-        }
-        .color-picker-modal {
-          position: absolute;
-          top: 40px;
-          display: flex;
-          width: 210px;
-          z-index: 2;
-          padding: 0px 0px 15px 15px;
-          flex-wrap: wrap;
-          .color {
-            width: 34px;
-            height: 34px;
-            border: none;
-            border-radius: 40px;
-            margin-right: 15px;
-            margin-top: 15px;
-            box-shadow: @shadow1;
-            transition: all .2s ease-in-out;
-            &:active{
-              box-shadow: none;
-              box-shadow: @shadow2;
-            }
-          }
-        }
-        .modal-backdrop {
-          position: fixed;
-          top: 0px;
-          left: 0px;
-          width: 100%;
-          height: 100%;
-          z-index: 1;
-          background-color: rgba(0,0,0,0);
-        }
-      }
-      .mui-text-field {
-        width: 80%;
-        .mui-text-field-focus-underline {
-          border-color: rgba(0,0,0,.7);
-        }
-      }
-    }
-
-    .tag-remove-btn {
-      color: black;
-      font-weight: 700;
-      margin-bottom: 0px;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      .glyphicon {
-        color: #757d83;
-        font-weight: 200;
-        margin-right: 10px;
-        padding: 2px;
-        width: 28px;
-        height: 28px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-decoration: none;
-        &:active {
-          color: black;
-          text-decoration: none;
-          background-color: rgba(0,0,0,.4);
-        }
-        &:hover {
-          text-decoration: none;
-          background-color: rgba(0,0,0,.2);
-        }
-      }
-    }
-
-    .badge {
-      background-color: #777777;
-    }
   }
 }
